content/v2.1/resume-job.md
---
title: RESUME JOB
summary: The RESUME JOB statement lets you resume jobs that were previously paused with PAUSE JOB.
toc: true
---

 The `RESUME JOB` [statement](sql-statements.html) lets you resume [paused](pause-job.html) [`IMPORT`](import.html) jobs, enterprise [`BACKUP`](backup.html) and [`RESTORE`](restore.html) jobs, and, as of v2.1, [`changefeeds`](change-data-capture.html).

{{site.data.alerts.callout_info }}You cannot pause schema changes.{{site.data.alerts.end }}


## Required privileges

By default, only the `root` user can control a job.

## Synopsis

<div>
  {{ partial "{{ page.version.version }}/sql/diagrams/resume_job.html" . }}
</div>

## Parameters

Parameter | Description
----------|------------
`job_id` | The ID of the job you want to resume, which can be found with [`SHOW JOBS`](show-jobs.html).
`select_stmt` | A [selection query](selection-queries.html) that returns `job_id`(s) to resume.

## Examples

### Pause a job

{{ partial "copy-clipboard.html" . }}
~~~ sql
> SHOW JOBS;
~~~

~~~
+----------------+---------+-------------------------------------------+...
|       id       |  type   |               description                 |...
+----------------+---------+-------------------------------------------+...
| 27536791415282 | RESTORE | RESTORE db.* FROM 'azure://backup/db/tbl' |...
+----------------+---------+-------------------------------------------+...
~~~

{{ partial "copy-clipboard.html" . }}
~~~ sql
> PAUSE JOB 27536791415282;
~~~

### Resume a single job

{{ partial "copy-clipboard.html" . }}
~~~ sql
> RESUME JOB 27536791415282;
~~~

### Resume multiple jobs

<span class="version-tag">New in v2.1:</span> To resume multiple jobs, nest a [`SELECT` clause](select-clause.html) that retrieves `job_id`(s) inside the `RESUME JOBS` statement:

{{ partial "copy-clipboard.html" . }}
~~~ sql
> RESUME JOBS (SELECT job_id FROM [SHOW JOBS]
      WHERE user_name = 'maxroach');
~~~

All jobs created by `maxroach` will be resumed.

## See also

- [`PAUSE JOB`](pause-job.html)
- [`SHOW JOBS`](show-jobs.html)
- [`CANCEL JOB`](cancel-job.html)
- [`BACKUP`](backup.html)
- [`RESTORE`](restore.html)
- [`IMPORT`](import.html)
- [`CREATE CHANGEFEED`](create-changefeed.html)
